[tool.poetry]
name = "edgedb-test"
version = "0.1.0"
description = "Testing EdgeDB"
authors = ["Ye Lin Aung <me@yelinaung.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
edgedb = "^0.23.0"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
